// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UsersTable renders properly 1`] = `
Object {
  "actionsLabel": "Acciones",
  "caption": "Usuarios",
  "children": Array [
    <CRUDTable_Fields>
      <CRUDTable_Field
        hideFromTable={false}
        hideInCreateForm={true}
        hideInUpdateForm={false}
        label="Id"
        name="id"
        queryable={true}
        readOnly={true}
        sortable={true}
        type="text"
      />
      <CRUDTable_Field
        hideFromTable={false}
        hideInCreateForm={false}
        hideInUpdateForm={false}
        label="Nombre"
        name="name"
        placeholder="Nombre"
        queryable={true}
        sortable={true}
        type="text"
      />
      <CRUDTable_Field
        hideFromTable={false}
        hideInCreateForm={false}
        hideInUpdateForm={false}
        label="Correo"
        name="email"
        placeholder="Correo"
        queryable={true}
        sortable={true}
        type="text"
      />
      <CRUDTable_Field
        hideFromTable={false}
        hideInCreateForm={false}
        hideInUpdateForm={false}
        label="Descripción"
        name="description"
        queryable={true}
        render={[Function]}
        sortable={true}
        type="text"
      />
      <CRUDTable_Field
        hideFromTable={true}
        hideInCreateForm={false}
        hideInUpdateForm={true}
        label="Contraseña"
        name="password"
        queryable={true}
        render={[Function]}
        sortable={true}
        type="text"
      />
    </CRUDTable_Fields>,
    <CRUDTable_CreateForm
      message="Crear una nueva usuario"
      onSubmit={[Function]}
      submitText="Crear"
      title="Crear usuario"
      trigger="Crear usuario"
      validate={[Function]}
    />,
    <CRUDTable_UpdateForm
      message="Actualizar usuario"
      onSubmit={[Function]}
      submitText="Actualizar"
      title="Actualizar usuario"
      trigger="Actualizar"
      validate={[Function]}
    />,
    <CRUDTable_DeleteForm
      message="Esta seguro que quiere eliminar la usuario?"
      onSubmit={[Function]}
      submitText="Eliminar"
      title="Eliminar usuario"
      trigger="Eliminar"
      validate={[Function]}
    />,
    <CRUDTable_Pagination
      defaultActivePage={1}
      itemsPerPage={20}
      totalOfItems={2}
    />,
  ],
  "items": Array [
    Object {
      "id": 1,
      "name": "Test User 1",
    },
    Object {
      "id": 2,
      "name": "Test User 2",
    },
  ],
  "onChange": [Function],
  "showQueryBuilder": true,
}
`;

exports[`UsersTable updates the options on change 1`] = `
Object {
  "actionsLabel": "Acciones",
  "caption": "Usuarios",
  "children": Array [
    <CRUDTable_Fields>
      <CRUDTable_Field
        hideFromTable={false}
        hideInCreateForm={true}
        hideInUpdateForm={false}
        label="Id"
        name="id"
        queryable={true}
        readOnly={true}
        sortable={true}
        type="text"
      />
      <CRUDTable_Field
        hideFromTable={false}
        hideInCreateForm={false}
        hideInUpdateForm={false}
        label="Nombre"
        name="name"
        placeholder="Nombre"
        queryable={true}
        sortable={true}
        type="text"
      />
      <CRUDTable_Field
        hideFromTable={false}
        hideInCreateForm={false}
        hideInUpdateForm={false}
        label="Correo"
        name="email"
        placeholder="Correo"
        queryable={true}
        sortable={true}
        type="text"
      />
      <CRUDTable_Field
        hideFromTable={false}
        hideInCreateForm={false}
        hideInUpdateForm={false}
        label="Descripción"
        name="description"
        queryable={true}
        render={[Function]}
        sortable={true}
        type="text"
      />
      <CRUDTable_Field
        hideFromTable={true}
        hideInCreateForm={false}
        hideInUpdateForm={true}
        label="Contraseña"
        name="password"
        queryable={true}
        render={[Function]}
        sortable={true}
        type="text"
      />
    </CRUDTable_Fields>,
    <CRUDTable_CreateForm
      message="Crear una nueva usuario"
      onSubmit={[Function]}
      submitText="Crear"
      title="Crear usuario"
      trigger="Crear usuario"
      validate={[Function]}
    />,
    <CRUDTable_UpdateForm
      message="Actualizar usuario"
      onSubmit={[Function]}
      submitText="Actualizar"
      title="Actualizar usuario"
      trigger="Actualizar"
      validate={[Function]}
    />,
    <CRUDTable_DeleteForm
      message="Esta seguro que quiere eliminar la usuario?"
      onSubmit={[Function]}
      submitText="Eliminar"
      title="Eliminar usuario"
      trigger="Eliminar"
      validate={[Function]}
    />,
    <CRUDTable_Pagination
      defaultActivePage={1}
      itemsPerPage={15}
      totalOfItems={2}
    />,
  ],
  "items": Array [
    Object {
      "id": 1,
      "name": "Test User 1",
    },
    Object {
      "id": 2,
      "name": "Test User 2",
    },
  ],
  "onChange": [Function],
  "showQueryBuilder": true,
}
`;
